# bambu-virtual-client

./: .gitignore  CMakeLists.txt  MqttFraming.cpp  MqttFraming.hpp  README.md  StructuredLog.cpp  StructuredLog.hpp  VirtualBambuTunnel.cpp  VirtualBambuTunnel.hpp  VirtualFtpsClient.cpp  VirtualFtpsClient.hpp  VirtualLanPrinterStore.cpp  VirtualLanPrinterStore.hpp  VirtualMqttCli.cpp  VirtualMqttClient.cpp  VirtualMqttClient.hpp  VirtualSsdpAliveJson.cpp  VirtualSsdpAliveJson.hpp  VirtualSsdpDiscovery.cpp  VirtualSsdpDiscovery.hpp
.github/workflows/: ci.yml
tests/: CMakeLists.txt  MqttFramingTest.cpp  VirtualFtpsClientLoopbackTest.cpp  VirtualLanPrinterStorePersistTest.cpp  VirtualMqttClientLoopbackTest.cpp  VirtualSsdpJsonContractTest.cpp
tests/e2e/: README.md  wire_smoke.py
tests/fixtures/: ssdp_alive_golden.json  ssdp_alive_minimal_golden.json
